--- a/Makefile.conf
+++ b/Makefile.conf
@@ -6,17 +6,11 @@ OSNAME = FennixProject
 # Kernel version.
 KERNEL_VERSION = alpha-0.0.1
 
-# 0 = FennixBoot
-# 1 = Stivale
-# 2 = Stivale2
-# 3 = Multiboot
-# 4 = Multiboot2
-# 5 = BOOTBOOT
-# Bootloader [! DO NOT CHANGE !]
-BOOTLOADER = 2
-
 # The path of the cross compiler. (If you don't know what is this, don't change it.)
-COMPILER_PATH = tools/cross/bin/
+COMPILER_PATH = tools/cross/bin
+
+# The path of the Limine bootloader.
+LIMINE_FOLDER = tools/limine
 
 # The architecture of the compiler (x86_64-elf- will be read as tools/cross/bin/x86_64-elf-gcc)
 COMPILER_ARCH = x86_64-elf-
