--- a/kernel/src/Makefile
+++ b/kernel/src/Makefile
@@ -5,17 +5,14 @@
 include ../../Makefile.conf
 
 #CC = /usr/bin/clang
-CC = ../../${COMPILER_PATH}${COMPILER_ARCH}gcc
-CPP = ../../${COMPILER_PATH}${COMPILER_ARCH}g++
-LD = ../../${COMPILER_PATH}${COMPILER_ARCH}ld
-AS = ../../${COMPILER_PATH}${COMPILER_ARCH}as
-OBJCOPY = ../../${COMPILER_PATH}${COMPILER_ARCH}objcopy
+CC = ../../${COMPILER_PATH}/${COMPILER_ARCH}gcc
+CPP = ../../${COMPILER_PATH}/${COMPILER_ARCH}g++
+LD = ../../${COMPILER_PATH}/${COMPILER_ARCH}ld
+AS = ../../${COMPILER_PATH}/${COMPILER_ARCH}as
+OBJCOPY = ../../${COMPILER_PATH}/${COMPILER_ARCH}objcopy
+GDB = ../../${COMPILER_PATH}/${COMPILER_ARCH}gdb
 NASM = /usr/bin/nasm
-GDB = ../../${COMPILER_PATH}${COMPILER_ARCH}gdb
 
-SFN_SOURCES = $(shell find ./ -type f -name '*.sfn')
-PSF_SOURCES = $(shell find ./ -type f -name '*.psf')
-TARGZ_SOURCES = $(shell find ./ -type f -name '*.tar.gz')
 ASM_SOURCES = $(shell find ./ -type f -name '*.asm')
 S_SOURCES = $(shell find ./ -type f -name '*.s')
 SS_SOURCES = $(shell find ./ -type f -name '*.S')
@@ -23,7 +20,7 @@ C_SOURCES = $(shell find ./ -type f -name '*.c')
 CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
 MAKE_DEPS_SOURCES = $(shell find ./ -type f -name '*.d')
 HEADERS = $(sort $(dir $(wildcard ../include/*)))
-OBJ = ${C_SOURCES:.c=.o} ${CPP_SOURCES:.cpp=.o} ${ASM_SOURCES:.asm=.o} ${S_SOURCES:.s=.o} ${SS_SOURCES:.S=.o} ${SFN_SOURCES:.sfn=.o} ${PSF_SOURCES:.psf=.o} ${TARGZ_SOURCES:.tar.gz=.o}
+OBJ = ${C_SOURCES:.c=.o} ${CPP_SOURCES:.cpp=.o} ${ASM_SOURCES:.asm=.o} ${S_SOURCES:.s=.o} ${SS_SOURCES:.S=.o}
 INCLUDE_DIR = ../include
 KERNEL = kernel.fsys
 
@@ -34,10 +31,10 @@ INTERNALLDFLAGS := 							\
 	-Wl,-static,--no-dynamic-linker,-ztext 	\
 	-nostdlib -nodefaultlibs -nolibc  		\
 	-zmax-page-size=0x1000					\
-	-Wl,-Map kernel.map
+	-Wl,-Map kernel.map -Tlinker.ld
 
 # Disable all warnings by adding "-w" in WARNCFLAG and if you want to treat the warnings as errors, add "-Werror"
-WARNCFLAG = -Wall -Wextra -w
+WARNCFLAG = -Wall -Wextra
 
 # Change march with minimum supported cpu // https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html
 INTERNALCFLAGS :=													\
@@ -56,33 +53,8 @@ ifeq ($(DEBUG), 1)
 	WARNCFLAG += -Wno-unused-function -Wno-maybe-uninitialized -Wno-builtin-declaration-mismatch -Wno-unknown-pragmas -Wno-unused-parameter -Wno-unused-variable
 endif
 
-ifeq ($(BOOTLOADER), 0)
-	INTERNALLDFLAGS += -Tlinker.ld
-	INTERNALCFLAGS += -DFENNIXBOOT
-endif
-
-ifeq ($(BOOTLOADER), 1)
-	INTERNALLDFLAGS += -Tlinker-stivale.ld
-	INTERNALCFLAGS += -DSTIVALE
-endif
-
-ifeq ($(BOOTLOADER), 2)
-	INTERNALLDFLAGS += -Tlinker-stivale2.ld
-	INTERNALCFLAGS += -DSTIVALE2
-endif
-
-ifeq ($(BOOTLOADER), 3)
-	INTERNALLDFLAGS += -Tlinker-multiboot.ld
-	INTERNALCFLAGS += -DMULTIBOOT
-endif
-
-ifeq ($(BOOTLOADER), 4)
-	INTERNALLDFLAGS += -Tlinker-multiboot2.ld
-	INTERNALCFLAGS += -DMULTIBOOT2
-endif
-
 default:
-	$(error "No option specified! You may want to use: build DEBUG=1 BOOTLOADER=0")
+	$(error "No option specified!")
 
 build: $(KERNEL)
 
@@ -94,18 +66,6 @@ $(KERNEL): $(OBJ)
 
 %.o: %.cpp ${HEADERS}
 	$(CPP) $(CFLAGS) $(WARNCFLAG) $(INTERNALCFLAGS) -std=c++20 -fexceptions -c $< -o $@ -fno-rtti
-
-%.o: %.sfn
-	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
-	nm $@
-
-%.o: %.psf
-	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
-	nm $@
-
-%.o: %.tar.gz
-	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
-	nm $@
 
 %.o: %.asm
 	${NASM} $< -f elf64 -o $@
