--- a/limine.cfg
+++ b/limine.cfg
@@ -1,10 +1,55 @@
-TIMEOUT=0
-MENU_BRANDING=FennixOS
+TIMEOUT=4
+INTERFACE_BRANDING=Fennix Project
 
-:Fennix Project
+:Fennix Project (Stivale2)
 # DO NOT EDIT!
 RESOLUTION=1280x720
 PROTOCOL=stivale2
+KERNEL_CMDLINE=debug
+KERNEL_PATH=boot:///kernel.fsys
+MODULE_PATH=boot:///initrd.tar.gz
+MODULE_STRING=ustar
+
+:Fennix Project (Stivale)
+# DO NOT EDIT!
+RESOLUTION=1280x720
+PROTOCOL=stivale
+KERNEL_CMDLINE=debug
+KERNEL_PATH=boot:///kernel.fsys
+MODULE_PATH=boot:///initrd.tar.gz
+MODULE_STRING=ustar
+
+:Fennix Project (Limine)
+# DO NOT EDIT!
+RESOLUTION=1280x720
+PROTOCOL=limine
+KERNEL_CMDLINE=debug
+KERNEL_PATH=boot:///kernel.fsys
+MODULE_PATH=boot:///initrd.tar.gz
+MODULE_STRING=ustar
+
+:Fennix Project (Linux)
+# DO NOT EDIT!
+RESOLUTION=1280x720
+PROTOCOL=linux
+KERNEL_CMDLINE=debug
+KERNEL_PATH=boot:///kernel.fsys
+MODULE_PATH=boot:///initrd.tar.gz
+MODULE_STRING=ustar
+
+:Fennix Project (Multiboot)
+# DO NOT EDIT!
+RESOLUTION=1280x720
+PROTOCOL=multiboot
+KERNEL_CMDLINE=debug
+KERNEL_PATH=boot:///kernel.fsys
+MODULE_PATH=boot:///initrd.tar.gz
+MODULE_STRING=ustar
+
+:Fennix Project (Multiboot2)
+# DO NOT EDIT!
+RESOLUTION=1280x720
+PROTOCOL=multiboot2
 KERNEL_CMDLINE=debug
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
