Update Limine config

--- a/limine.cfg
+++ b/limine.cfg
@@ -1,19 +1,10 @@
-TIMEOUT=4
+TIMEOUT=1
 INTERFACE_BRANDING=Fennix Project
 
 :Fennix Project (Stivale2)
 # DO NOT EDIT!
-RESOLUTION=1280x720
+COMMENT=Boot Fennix Project using Stivale2 protocol (Default)
 PROTOCOL=stivale2
-KERNEL_CMDLINE=debug
-KERNEL_PATH=boot:///kernel.fsys
-MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
-
-:Fennix Project (Stivale)
-# DO NOT EDIT!
-RESOLUTION=1280x720
-PROTOCOL=stivale
 KERNEL_CMDLINE=debug
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
@@ -21,35 +12,8 @@ MODULE_STRING=ustar
 
 :Fennix Project (Limine)
 # DO NOT EDIT!
-RESOLUTION=1280x720
+COMMENT=Boot Fennix Project using Limine protocol (not tested yet)
 PROTOCOL=limine
-KERNEL_CMDLINE=debug
-KERNEL_PATH=boot:///kernel.fsys
-MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
-
-:Fennix Project (Linux)
-# DO NOT EDIT!
-RESOLUTION=1280x720
-PROTOCOL=linux
-KERNEL_CMDLINE=debug
-KERNEL_PATH=boot:///kernel.fsys
-MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
-
-:Fennix Project (Multiboot)
-# DO NOT EDIT!
-RESOLUTION=1280x720
-PROTOCOL=multiboot
-KERNEL_CMDLINE=debug
-KERNEL_PATH=boot:///kernel.fsys
-MODULE_PATH=boot:///initrd.tar.gz
-MODULE_STRING=ustar
-
-:Fennix Project (Multiboot2)
-# DO NOT EDIT!
-RESOLUTION=1280x720
-PROTOCOL=multiboot2
 KERNEL_CMDLINE=debug
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
