--- a/Makefile.conf
+++ b/Makefile.conf
@@ -14,3 +14,6 @@ LIMINE_FOLDER = tools/limine
 
 # The architecture of the compiler (x86_64-elf- will be read as tools/cross/bin/x86_64-elf-gcc)
 COMPILER_ARCH = x86_64-elf-
+
+# Qemu path. If you want to use the one you have installed in your system, change it to /usr/bin/qemu-system-x86_64
+QEMU_PATH = tools/qemu/build/qemu-system-x86_64
