stub driver files

--- a/userspace/drivers/Makefile
+++ b/userspace/drivers/Makefile
@@ -1,5 +1,31 @@
 build:
-	$(info Not Implemented Yet)
+	make -C peripheral/mouse build
+	make -C peripheral/keyboard build
+	make -C audio/ac97 build
+	make -C audio/ihda build
+	make -C audio/pcspk build
+	make -C audio/sb16 build
+	make -C video/amd build
+	make -C video/bochs build
+	make -C video/intel build
+	make -C video/nvidia build
+	make -C network/amdpcnet build
+	make -C network/ne2000 build
+	make -C network/rtl8139 build
+	make -C network/rtl8169 build
 
 clean:
-	$(info Not Implemented Yet)
+	make -C peripheral/mouse clean
+	make -C peripheral/keyboard clean
+	make -C audio/ac97 clean
+	make -C audio/ihda clean
+	make -C audio/pcspk clean
+	make -C audio/sb16 clean
+	make -C video/amd clean
+	make -C video/bochs clean
+	make -C video/intel clean
+	make -C video/nvidia clean
+	make -C network/amdpcnet clean
+	make -C network/ne2000 clean
+	make -C network/rtl8139 clean
+	make -C network/rtl8169 clean
