finally syscalls are working and a more libc stubs

--- a/userspace/apps/Makefile
+++ b/userspace/apps/Makefile
@@ -1,5 +1,11 @@
 build:
 	make -C init build
+	make -C uiserver build
+	make -C wm build
+	make -C fesktop build
 
 clean:
 	make -C init clean
+	make -C uiserver clean
+	make -C wm clean
+	make -C fesktop clean
