--- a/userspace/drivers/Makefile
+++ b/userspace/drivers/Makefile
@@ -1,15 +1,17 @@
 build:
-	make -C peripheral/mouse build
-	make -C peripheral/keyboard build
-	make -C audio/ac97 build
-	make -C audio/pcspk build
-	make -C video/bochs build
-	make -C network/rtl8139 build
+	$(info Driver files are not supported yet)
+# make -C peripheral/keyboard build
+# make -C peripheral/mouse build
+# make -C audio/ac97 build
+# make -C audio/pcspk build
+# make -C video/bochs build
+# make -C network/rtl8139 build
 
 clean:
-	make -C peripheral/mouse clean
-	make -C peripheral/keyboard clean
-	make -C audio/ac97 clean
-	make -C audio/pcspk clean
-	make -C video/bochs clean
-	make -C network/rtl8139 clean
+	$(info Driver files are not supported yet)
+# make -C peripheral/keyboard clean
+# make -C peripheral/mouse clean
+# make -C audio/ac97 clean
+# make -C audio/pcspk clean
+# make -C video/bochs clean
+# make -C network/rtl8139 clean
