trying to fix "Network is unreachable." on appveyor

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -26,9 +26,8 @@ export BUILD_SH
 all: update_limine update_gcc update_qemu create_build
 
 appveyor: update_limine
-	wget https://cdn-121.anonfiles.com/Rdr0e2e3ye/b3b19761-1651973232/cross.tar.gz -P tools/
-	tar -xvzf cross.tar.gz
-	rm -f cross.tar.gz
+	wget https://get.station307.com/SiUYgmJ15kt/cross.tar.xz -O cross.tar.xz
+	tar -xvf cross.tar.xz
 
 initrd:
 	gcc -w initrd.c -o initrd.elf
