--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,12 +5,13 @@
 include ../Makefile.conf
 
 #CC = /usr/bin/clang
-CC = ../${COMPILER_PATH}/${COMPILER_ARCH}gcc
-CPP = ../${COMPILER_PATH}/${COMPILER_ARCH}g++
-LD = ../${COMPILER_PATH}/${COMPILER_ARCH}ld
-AS = ../${COMPILER_PATH}/${COMPILER_ARCH}as
-OBJCOPY = ../${COMPILER_PATH}/${COMPILER_ARCH}objcopy
-GDB = ../${COMPILER_PATH}/${COMPILER_ARCH}gdb
+CC = ../$(COMPILER_PATH)/$(COMPILER_ARCH)gcc
+CPP = ../$(COMPILER_PATH)/$(COMPILER_ARCH)g++
+LD = ../$(COMPILER_PATH)/$(COMPILER_ARCH)ld
+AS = ../$(COMPILER_PATH)/$(COMPILER_ARCH)as
+OBJCOPY = ../$(COMPILER_PATH)/$(COMPILER_ARCH)objcopy
+OBJDUMP = ../$(COMPILER_PATH)/$(COMPILER_ARCH)objdump
+GDB = ../$(COMPILER_PATH)/$(COMPILER_ARCH)gdb
 NASM = /usr/bin/nasm
 
 PSF_SOURCES = $(shell find ./ -type f -name '*.psf')
@@ -22,7 +23,7 @@ CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
 MAKE_DEPS_SOURCES = $(shell find ./ -type f -name '*.d')
 HEADERS = $(sort $(dir $(wildcard ./include/*)))
 HEADERS2 = $(sort $(dir $(wildcard ../include/*)))
-OBJ = ${C_SOURCES:.c=.o} ${CPP_SOURCES:.cpp=.o} ${ASM_SOURCES:.asm=.o} ${S_SOURCES:.s=.o} ${SS_SOURCES:.S=.o} ${PSF_SOURCES:.psf=.o}
+OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o) $(ASM_SOURCES:.asm=.o) $(S_SOURCES:.s=.o) $(SS_SOURCES:.S=.o) $(PSF_SOURCES:.psf=.o)
 INCLUDE_DIR = ./include
 INCLUDE_DIR2 = ../include
 KERNEL = kernel.fsys
@@ -34,12 +35,14 @@ LDFLAGS := 									\
 	-zmax-page-size=0x1000					\
 	-Wl,-Map kernel.map -Tlinker.ld -shared
 
+NASMFLAGS := -f elf64
+
 # Disable all warnings by adding "-w" in WARNCFLAG and if you want to treat the warnings as errors, add "-Werror"
 WARNCFLAG = -Wall -Wextra -w
 
 # Change march with minimum supported cpu // https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html
 CFLAGS :=																\
-	-I${INCLUDE_DIR} -I${INCLUDE_DIR2}									\
+	-I$(INCLUDE_DIR) -I$(INCLUDE_DIR2)									\
 	-DKERNEL_NAME='"$(OSNAME)"' -DKERNEL_VERSION='"$(KERNEL_VERSION)"'	\
 	-fstack-protector-all												\
 	-fno-pic -fno-pie -mno-80387										\
@@ -49,8 +52,9 @@ CFLAGS :=																\
 
 ifeq ($(DEBUG), 1)
 	CFLAGS += -DDEBUG -ggdb -O0 -fdiagnostics-color=always -fsanitize=undefined
-	LDFLAGS += -ggdb -O0 -O2
+	LDFLAGS += -ggdb -O0 -O2 -g
 	CFLAGS += -DTRACING
+	NASMFLAGS += -F dwarf -g
 	WARNCFLAG += -Wno-unused-function -Wno-maybe-uninitialized -Wno-builtin-declaration-mismatch -Wno-unknown-pragmas -Wno-unused-parameter -Wno-unused-variable
 endif
 
@@ -58,25 +62,20 @@ default:
 	$(error "No option specified!")
 
 build: $(KERNEL)
+	$(OBJDUMP) -d kernel.fsys > kernel_full.map
 
 $(KERNEL): $(OBJ)
 	$(CC) $(LDFLAGS) $(OBJ) -o $@
 
-%.o: %.c ${HEADERS} ${HEADERS2}
+%.o: %.c $(HEADERS) $(HEADERS2)
 	$(CC) $(CFLAGS) $(WARNCFLAG) $(CFLAGS) -std=c17 -c $< -o $@
 
 # https://gcc.gnu.org/projects/cxx-status.html
-%.o: %.cpp ${HEADERS} ${HEADERS2}
+%.o: %.cpp $(HEADERS) $(HEADERS2)
 	$(CPP) $(CFLAGS) $(WARNCFLAG) $(CFLAGS) -std=c++20 -fexceptions -c $< -o $@ -fno-rtti
 
 %.o: %.asm
-	${NASM} $< -f elf64 -o $@
-
-%.bin: %.asm
-	${NASM} $< -f bin -o $@
-
-%.bin: %.s
-	${NASM} $< -f elf64 -o $@
+	$(NASM) $< $(NASMFLAGS) -o $@
 
 %.o: %.s
 	$(AS) -o $@ $<
@@ -90,4 +89,4 @@ $(KERNEL): $(OBJ)
 	nm $@
 
 clean:
-	rm -f *.bin *.o *.elf *.fsys *.sym kernel.map initrd.tar.gz ${OBJ} ${MAKE_DEPS_SOURCES}
+	rm -f *.bin *.o *.elf *.fsys *.sym kernel.map kernel_full.map initrd.tar.gz $(OBJ) $(MAKE_DEPS_SOURCES)
