--- a/userspace/apps/Makefile
+++ b/userspace/apps/Makefile
@@ -1,11 +1,13 @@
 build:
 	make -C init build
+	make -C monoton build
 	make -C uiserver build
 	make -C wm build
 	make -C fesktop build
 
 clean:
 	make -C init clean
+	make -C monoton clean
 	make -C uiserver clean
 	make -C wm clean
 	make -C fesktop clean
