removed git-email because it's optional and unavailable for ubuntu 18.04

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -13,10 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Install dependencies 1
-      run: sudo apt-get install xorriso git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build
-      
-    - name: Install dependencies 2
-      run: sudo apt-get install git-email libaio-dev libbluetooth-dev libbrlapi-dev libbz2-dev libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev librbd-dev librdmacm-dev libsasl2-dev libsdl2-dev libseccomp-dev libsnappy-dev libssh-dev libvde-dev libvdeplug-dev libvte-2.91-dev libxen-dev liblzo2-dev valgrind xfslibs-dev libnfs-dev libiscsi-dev      
+      run: sudo apt-get install xorriso git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build libaio-dev libbluetooth-dev libbrlapi-dev libbz2-dev libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev librbd-dev librdmacm-dev libsasl2-dev libsdl2-dev libseccomp-dev libsnappy-dev libssh-dev libvde-dev libvdeplug-dev libvte-2.91-dev libxen-dev liblzo2-dev valgrind xfslibs-dev libnfs-dev libiscsi-dev      
       
     - name: Make tools
       run: make tools
