--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,15 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Update System
-      run: sudo apt-get update && sudo apt upgrade -y
+      run: sudo apt-get update
 
     - name: Install dependencies
-      run: sudo apt-get install xorriso git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build libaio-dev libbluetooth-dev libbrlapi-dev libbz2-dev libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev librbd-dev librdmacm-dev libsasl2-dev libsdl2-dev libseccomp-dev libsnappy-dev libssh-dev libvde-dev libvdeplug-dev libvte-2.91-dev libxen-dev liblzo2-dev valgrind xfslibs-dev libnfs-dev libiscsi-dev      
-      
-    - name: Make tools
-      run: make tools
-      
-    - name: Check
+      run: sudo apt-get install xorriso mtools genisoimage ovmf nasm doxygen -y
+
+    - name: Install binutils & GCC dependencies
+      run: sudo apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo -y
+
+    - name: Downloading fonts & compiling initrd
+      run: make tools_workflow0
+
+    - name: Get the latest version of Limine
+      run: make tools_workflow1
+
+    - name: Clone and compile binutils
+      run: make tools_workflow2
+
+    - name: Clone and compile GCC
+      run: make tools_workflow3
+
+    - name: Build Image
       run: make build
