--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -45,3 +45,9 @@ jobs:
 
     - name: Build Image
       run: make build
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: ISO
+        path: FennixProject.iso
