--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,39 +15,39 @@ jobs:
     - name: Update System
       run: sudo apt-get update
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: sudo apt-get install xorriso mtools genisoimage ovmf nasm doxygen -y
 
-    - name: Cache cross folder
+    - name: Cache cross Folder
       id: cache-cross
       uses: actions/cache@v3
       with:
         path: tools/cross
         key: ${{ runner.os }}-cross-${{ hashFiles('tools/Makefile') }}
 
-    - name: Install binutils & GCC dependencies
+    - name: Install GNU Binutils & GNU Compiler Collection Dependencies
       if: steps.cache-cross.outputs.cache-hit != 'true'
       run: sudo apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo -y
 
-    - name: Downloading fonts & compiling initrd
+    - name: Downloading Fonts & Compiling initrd.c
       run: make tools_workflow0
 
-    - name: Get the latest version of Limine
+    - name: Cloning Limine
       run: make tools_workflow1
 
-    - name: Clone and compile binutils
+    - name: Clone and Compile GNU Binutils
       if: steps.cache-cross.outputs.cache-hit != 'true'
       run: make tools_workflow2
 
-    - name: Clone and compile GCC
+    - name: Clone and Compile GNU Compiler Collection
       if: steps.cache-cross.outputs.cache-hit != 'true'
       run: make tools_workflow3
 
     - name: Build Image
       run: make build
       
-    - name: Upload a Build Artifact
+    - name: Upload Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: ISO
+        name: FennixProject
         path: FennixProject.iso
