--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,6 +1,10 @@
 
 build:
 	make -C crt build
+	make -C src build
+	make -C libgcc build
 
 clean:
 	make -C crt clean
+	make -C src clean
+	make -C libgcc clean
