updated userspace apps

--- a/userspace/apps/init/Makefile
+++ b/userspace/apps/init/Makefile
@@ -3,19 +3,16 @@ include ../../../Makefile.conf
 NAME=init
 OUTPUT_DIR=../../../resources/initrd/system/
 
-LIBC_DIR=../../../libc/out
-LIBC_crt=$(LIBC_DIR)/crt/crt
-
 CC = ../../../$(COMPILER_PATH)/$(COMPILER_ARCH)gcc
 
 CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
-HEADERS = $(sort $(dir $(wildcard ../../../include/*)))
-INCLUDE_DIR = ../../../include
+HEADERS = $(sort $(dir $(wildcard ../../../libc/include/*)))
+INCLUDE_DIR = ../../../libc/include
 
 build: $(NAME)
 
 $(NAME): $(CPP_SOURCES)
-	$(CC) -I$(INCLUDE_DIR) -nostdlib -fPIC -std=c++2a $(CPP_SOURCES) $(LIBC_crt)1.o -o $(OUTPUT_DIR)$(NAME)
+	$(CC) -I$(INCLUDE_DIR) --sysroot=../../../resources/initrd/system -fPIC -std=c++2a $(CPP_SOURCES) -o $(OUTPUT_DIR)$(NAME)
 
 clean:
 	rm -f $(OUTPUT_DIR)$(NAME)
