--- a/userspace/libs/monoton/Makefile
+++ b/userspace/libs/monoton/Makefile
@@ -1,12 +1,13 @@
 include ../../../Makefile.conf
 
 NAME=monoton
-OUTPUT_DIR=../../../resources/initrd/system/
 
-LIBS_DIR=../../../resources/initrd/system/lib/
+OBJECT_NAME=lib$(NAME).a
+
+OUTPUT_DIR=../../../resources/initrd/system/lib/
 
 CC = ../../../$(COMPILER_PATH)/$(COMPILER_ARCH)gcc
-LD = ../../../$(COMPILER_PATH)/$(COMPILER_ARCH)ld
+AR = ../../../$(COMPILER_PATH)/$(COMPILER_ARCH)ar
 
 C_SOURCES = $(shell find ./ -type f -name '*.c')
 CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
@@ -14,13 +15,13 @@ OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o)
 HEADERS = $(sort $(dir $(wildcard ../../../libc/include/*)))
 INCLUDE_DIR = ../../../libc/include
 
-LDFLAGS := --sysroot=../../../resources/initrd/system/
-CFLAGS := -fPIC -I$(INCLUDE_DIR)
+LDFLAGS :=
+CFLAGS := -I$(INCLUDE_DIR) -fPIC --sysroot=../../../resources/initrd/system/
 
-build: $(NAME)
+build: $(OBJECT_NAME)
 
-$(NAME): $(OBJ)
-	$(CC) $(LDFLAGS) $(OBJ) -o $(OUTPUT_DIR)$@ -lmonoton -lscparse
+$(OBJECT_NAME): $(OBJ)
+	$(AR) rcs $(OUTPUT_DIR)$@ $(OBJ)
 
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -std=c17 -c $< -o $@
@@ -29,4 +30,4 @@ $(NAME): $(OBJ)
 	$(CC) $(CFLAGS) -std=c++20 -c $< -o $@
 
 clean:
-	rm -f $(OUTPUT_DIR)$(NAME) $(OBJ)
+	rm -f $(OUTPUT_DIR)$(OBJECT_NAME) $(OBJ)
