--- a/userspace/libs/Makefile
+++ b/userspace/libs/Makefile
@@ -1,7 +1,9 @@
 build:
 	make -C monoton build
 	make -C scparse build
+	make -C algo build
 
 clean:
 	make -C monoton clean
 	make -C scparse clean
+	make -C algo clean
