compile drivers even if they are not supported

--- a/userspace/drivers/Makefile
+++ b/userspace/drivers/Makefile
@@ -1,17 +1,13 @@
 build:
-	$(info Driver files are not supported yet)
-# make -C peripheral/keyboard build
-# make -C peripheral/mouse build
-# make -C audio/ac97 build
-# make -C audio/pcspk build
-# make -C video/bochs build
-# make -C network/rtl8139 build
+	make -C peripheral/keyboard build
+	make -C peripheral/mouse build
+	make -C audio/ac97 build
+	make -C video/bochs build
+	make -C network/rtl8139 build
 
 clean:
-	$(info Driver files are not supported yet)
-# make -C peripheral/keyboard clean
-# make -C peripheral/mouse clean
-# make -C audio/ac97 clean
-# make -C audio/pcspk clean
-# make -C video/bochs clean
-# make -C network/rtl8139 clean
+	make -C peripheral/keyboard clean
+	make -C peripheral/mouse clean
+	make -C audio/ac97 clean
+	make -C video/bochs clean
+	make -C network/rtl8139 clean
