+simple self testing functions

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -20,3 +20,6 @@ COMPILER_ARCH = x86_64-elf-
 # Qemu path. If you want to use the one you have installed in your system,
 # change it to /usr/bin/qemu-system-x86_64
 QEMU_PATH = tools/qemu/build/qemu-system-x86_64
+
+# Enable unit testing.
+UNIT_TESTS = 1
