--- a/Makefile.conf
+++ b/Makefile.conf
@@ -6,6 +6,12 @@ OSNAME = FennixProject
 # Kernel version.
 KERNEL_VERSION = alpha-0.0.1
 
+# Which bootloader to use.
+# Available bootloaders:
+#   - lynx     - Lynx Bootloader
+#   - limine   - Limine Bootloader
+BOOTLOADER=limine
+
 # The path of the cross compiler.
 # If you want to use your own cross compiler (which I don't recommend),
 # change it to the path of the compiler.
