--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ tools/*
 !tools/Makefile
 !tools/initrd.c
 initrd.tar.gz
-kernel/files/*
+kernel/files/ter-powerline-v12n.psf
+kernel/files/zap-ext-light20.psf
+kernel/files/zap-ext-light24.psf
+kernel/files/zap-light16.psf
 *.log
 *.drv
 *.o
